--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,35 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/jass.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
+    <link rel="stylesheet" href="/css/home.css" />
     <link rel="stylesheet" href="/css/style.css">
     <title>Game Getter</title>
 </head>
 
 <body>
-    <header>
-        <div class="nav">
-            <nav id="nav">
-                <button type="button" id="home">Home</button>
-                <button type="button" id="dashboard">Dashboard</button>
-                {{!-- {{#if logged_in}} --}}
-                <button type="button" id="logout">Logout</button>
-                {{!-- {{else}} --}}
-                <button type="button" id="login">Login</button>
-                {{!-- {{/if}} --}}
-            </nav>
-        </div>
-    </header>
 
     <main>
         {{{body}}}
     </main>
 
-    {{!-- {{#if logged_in}}
-    <script src="/js/logout.js"></script>
-    {{else}} --}}
-    <script src="/js/main.js"></script>
-    {{!-- {{/if}} --}}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+    <script src="/js/menu.js"></script>
 </body>
 
 </html>
