--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -2,7 +2,7 @@
     <div class="logo">
         <a href="/">
             <img src="./assets/images/jitter.jpg" alt="Coffee with red eyes looking at laptop" />
-            <h2 class="groupname">Game Getters</h2>
+            <h2 class="groupname">Game Getter</h2>
         </a>
     </div>
     <div class="searchbar">
