search is working, card display is busted, but results from db will display

--- a/views/partials/card.handlebars
+++ b/views/partials/card.handlebars
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/css/card.css" />
 
-<section class="container">
-    {{#each videogames as |game|}}
+<section class="container" style="display: flex-wrap;">
+    {{#each games as |game|}}
     <div class="card" style="width: 18rem">
         <img src="/assets/images/jitter.jpg" class="card-img-top" alt="..." />
         <div class="card-body">
