--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -6,10 +6,10 @@
         </a>
     </div>
     <div class="searchbar">
-
-        <input class="searchInput" type="text" placeholder="Search for a game..." />
-        <input class="searchbtn" type="submit" value="search" />
-
+        <form class="form-class">
+            <input class="searchInput" for="game-search" type="text" placeholder="Search for a game..." />
+            <input class="searchbtn" type="submit" name="game-search" value="search" />
+        </form>
     </div>
     <div class="toggle"></div>
 </header>
