--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,6 +22,7 @@
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
     <script src="/js/menu.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
