fixed logo path and added menu parital to cardPage

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,7 +1,7 @@
 <header>
     <div class="logo">
         <a href="/">
-            <img src="./assets/images/jitter.jpg" alt="Coffee with red eyes looking at laptop" />
+            <img src="/assets/images/jitter.jpg" alt="Coffee with red eyes looking at laptop" />
             <h2 class="groupname">Game Getter</h2>
         </a>
     </div>
