--- a/views/layouts/contact.handlebars
+++ b/views/layouts/contact.handlebars
@@ -20,28 +20,28 @@
         <div class="social">
             <div>
                 <h2 class="bolcar">Steven Bolcar</h2>
-                <a href="https://github.com/dfvargas17"><img class="steven" src="assets/images/blue-github.png"
-                        alt=" blue github logo " /></a>
+                <a href="https://github.com/StevenBolc" target="_blank"><img class="steven"
+                        src="assets/images/blue-github.png" alt=" blue github logo " /></a>
             </div>
             <div>
                 <h2 class="marshall">Kris Marshall</h2>
-                <a href="https://github.com/RflctnOfU"><img class="kris" src="assets/images/green-github.png"
-                        alt=" green github logo" /></a>
+                <a href="https://github.com/RflctnOfU" target="_blank"><img class="kris"
+                        src="assets/images/green-github.png" alt=" green github logo" /></a>
             </div>
             <div>
                 <h2 class="vargas">Diego Vargas</h2>
-                <a href="https://github.com/StevenBolc?tab=repositories"><img class="diego"
+                <a href="https://github.com/dfvargas17" target="_blank"><img class="diego"
                         src="assets/images/red-github.jpg" alt="red github logo" /></a>
             </div>
             <div>
                 <h2 class="evans">Tyler Evans</h2>
-                <a href="https://github.com/TDEvans97"><img class="tyler" src="assets/images/gold-github.png"
-                        alt="gold github logo" /></a>
+                <a href="https://github.com/TDEvans97" target="_blank"><img class="tyler"
+                        src="assets/images/gold-github.png" alt="gold github logo" /></a>
             </div>
             <div>
                 <h2 class="maddox">Zachary Maddox</h2>
-                <a href="https://github.com/Zachary-Maddox"><img class="zachary" src="assets/images/purple-github.png"
-                        alt="purple github logo" /></a>
+                <a href="https://github.com/Zachary-Maddox" target="_blank"><img class="zachary"
+                        src="assets/images/purple-github.png" alt="purple github logo" /></a>
             </div>
         </div>
     </footer>
