added our emails to the contact page form....still needs to be fixed to work

--- a/views/contactPage.handlebars
+++ b/views/contactPage.handlebars
@@ -13,8 +13,8 @@
         <label for="exampleFormControlTextarea1" class="form-label text-light">Detailed Message</label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         <a
-            href="mailto:z19s96p@aol.com,cc=secondemail@example.com,
-                    cc=anotheremail@example.com, anotheremail@example.com, &bcc=lastemail@example.com&subject=Mail from our Website&body=Dear W3docs Team">
+            href="mailto:z19s96p@aol.com,cc=tylerdevansmusic@gmail.com,
+                    steven.bolcar95@gmail.com, rflctnofu@hotmail.com, &bcc=df_vargas09@hotmail.com&subject=Mail from our Website&body=Dear W3docs Team">
             <button> Send Email </button></a>
     </div>
 </section>
