--- a/views/layouts/404.handlebars
+++ b/views/layouts/404.handlebars
@@ -10,19 +10,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     <link rel="stylesheet" href="/css/home.css" />
     <link rel="stylesheet" href="/css/style.css">
-    <title>Game Getter</title>
+    <title>Not Found</title>
 </head>
 
 <body>
-
     <main>
         {{{body}}}
     </main>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
-    <script src="/js/menu.js"></script>
     <script src="/js/main.js"></script>
 </body>
 
