--- a/views/cardPage.handlebars
+++ b/views/cardPage.handlebars
@@ -1,6 +1,6 @@
-<div class="showcase">
+{{!-- <div class="showcase">
     {{> header}}
     {{> video}}
     {{> card}}
 </div>
-{{> menu}}
+{{> menu}} --}}
