--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -9,7 +9,7 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/home.css" />
     <link rel="stylesheet" href="/css/style.css">
-    <title>Game Getter</title>
+    <title>Dashboard</title>
 </head>
 
 <body>
