--- a/views/partials/video.handlebars
+++ b/views/partials/video.handlebars
@@ -1,2 +1,2 @@
-<video src="/assets/videos/home-bg.mp4" muted autoplay loop></video>
+<video src="/assets/videos/gameplayvideos.mp4" muted autoplay loop></video>
 <div class="overlay"></div>
