--- a/public/css/home.css
+++ b/public/css/home.css
@@ -50,7 +50,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: #111;
+    /* background: #111; */
     color: #fff;
     z-index: 2;
     transition: 0.5s;
