--- a/views/aboutUs.handlebars
+++ b/views/aboutUs.handlebars
@@ -4,7 +4,9 @@
     </div>
 </section>
 
-<section class="container-sm py-3 contactForm">
+
+<!-- insert dancing thing video -->
+{{!-- <section class="container-sm py-3 contactForm">
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label text-light">Email address</label>
         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" />
@@ -17,4 +19,4 @@
                     steven.bolcar95@gmail.com, rflctnofu@hotmail.com, &bcc=df_vargas09@hotmail.com&subject=Mail from our Website&body=Dear W3docs Team">
             <button> Send Email </button></a>
     </div>
-</section>
+</section> --}}
