--- a/views/partials/card.handlebars
+++ b/views/partials/card.handlebars
@@ -3,14 +3,15 @@
 <section class="container" style="display: flex-wrap;">
     {{#each games as |game|}}
     <div class="card" style="width: 18rem;">
-        <div>
-            <img src='{{game.background_image}}' class="card-img-top" alt="{{game.name}} poster" />
-        </div>
+        <a href="/game/{{game.id}}">
+            <div>
+                <img src='{{game.background_image}}' class="card-img-top" alt="{{game.name}} poster" />
+            </div>
+        </a>
         <div class="card-body">
             <h5 class="card-title cardText">{{game.name}}</h5>
             <p class="card-text">{{game.platform}}</p>
             <button class="btn btn-dark" id="favorite" data-id="{{game.id}}">Add Favorite</button>
-            {{!-- <a href="#" class="btn btn-dark">Add Favorite</a> --}}
         </div>
     </div>
     {{/each}}
