Refactored the homepage

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,6 @@
 <section class="showcase">
-    {{> header}}
+    {{> homepageheader}}
+    {{> homepagehamburger}}
+    {{> homepagesearch}}
     {{> video}}
-    {{> textOverlay}}
 </section>
-{{> menu}}
