--- a/views/partials/video.handlebars
+++ b/views/partials/video.handlebars
@@ -1,2 +1,1 @@
-<video src="/assets/videos/gameplayvideos.mp4" muted autoplay loop></video>
-<div class="overlay"></div>
+<video id="background-video" src="/assets/videos/gameplay-bg.mp4" muted autoplay loop></video>
