--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -1,5 +1,4 @@
-<div class="overlay"></div>
-<div class="text">
+<div class="text login-block">
     <h2 id="login-title">Login</h2>
     <form class="form login-form">
         <div class="form-group">
