--- a/views/loginPage.handlebars
+++ b/views/loginPage.handlebars
@@ -1,6 +1,6 @@
 <section class="showcase">
-    {{> header}}
+    {{> homepageheader}}
+    {{> homepagehamburger}}
     {{> video}}
     {{> login}}
 </section>
-{{> menu}}
