--- a/views/signupPage.handlebars
+++ b/views/signupPage.handlebars
@@ -1,6 +1,6 @@
 <section class="showcase">
-    {{> header}}
+    {{> homepageheader}}
+    {{> homepagehamburger}}
     {{> video}}
     {{> signup}}
 </section>
-{{> menu}}
