--- a/views/partials/signup.handlebars
+++ b/views/partials/signup.handlebars
@@ -1,5 +1,5 @@
 <div class="overlay"></div>
-<div class="text">
+<div class="text login-block">
     <h2 id="login-title">Sign Up</h2>
     <form class="form signup-form">
         <div class="form-group">
