--- a/views/myList.handlebars
+++ b/views/myList.handlebars
@@ -1,8 +1,7 @@
 <div class="showcase">
     <h1>Hello World!</h1>
-    {{> header}}
+    {{> homepageheader}}
+    {{> homepagehamburger}}
     {{> video}}
     {{> usercard}}
 </div>
-
-{{> menu}}
