final final touches

--- a/views/searchResults.handlebars
+++ b/views/searchResults.handlebars
@@ -1,9 +1,6 @@
 <div class="showcase">
-    {{> header}}
+    {{> homepageheader}}
+    {{> homepagehamburger}}
     {{> video}}
     {{> card}}
 </div>
-{{> menu}}
-
-{{!--
-<script src="/js/favorite.js"></script> --}}
