--- a/views/notFound.handlebars
+++ b/views/notFound.handlebars
@@ -1,11 +1,10 @@
 <div class="container d-flex flex-column align-items-center justify-content-center" style="height: 100vh;">
 
     <div class="mt-4 mb4">
-        <img src="/assets/images/jitter.jpg" alt="" style="width: 250px; height: auto">
+        <img src="/assets/images/jitter-juice-jockies.png" style="width: 500px; height: auto;" alt="">
     </div>
-    <div class="mt-4 mb4" style="width: 100px; height: auto">
-        <img src="/assets/images/jitter-juice-jockies.png" alt="">
-    <div class="mt-4 mb-4"><i class="fas fa-exclamation-triangle fa-2xl " style="color: red;"></i>
+    <div class="mb-4">
+        <i class="fas fa-exclamation-triangle fa-2xl " style="color: red;"></i>
 
     </div>
     <div class=" mt-4 mb-4">
