fixed signup bug added logout page and fixed logout route

--- a/views/aboutUs.handlebars
+++ b/views/aboutUs.handlebars
@@ -4,19 +4,13 @@
     </div>
 </section>
 
+<div class="d-flex justify-content-center align-content-center flex-direction-column">
+    <div class="d-flex">
+        <p style="color: white; font-size: 1.5rem;">Thanks for using our App! Please visit our GitHub pages by following
+            the links below!!</p>
+    </div>
 
-<!-- insert dancing thing video -->
-{{!-- <section class="container-sm py-3 contactForm">
-    <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label text-light">Email address</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" />
-    </div>
-    <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label text-light">Detailed Message</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-        <a
-            href="mailto:z19s96p@aol.com,cc=tylerdevansmusic@gmail.com,
-                    steven.bolcar95@gmail.com, rflctnofu@hotmail.com, &bcc=df_vargas09@hotmail.com&subject=Mail from our Website&body=Dear W3docs Team">
-            <button> Send Email </button></a>
-    </div>
-</section> --}}
+</div>
+<div class="d-flex justify-content-center align-content-center flex-direction-column">
+    <a href="/" style="font-size: 1.25rem;">Home</a>
+</div>
